--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -169,8 +169,14 @@
                             <td>{{ zone['comment'] }}</td>
                         {% endif %}
                         <td class="text-end">
-                            {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and zone['user_id'] == user_id) %}
                             <div class="gap-2">
+                                {% if whois_enabled %}
+                                <a class="btn btn-sm btn-outline-secondary"
+                                href="index.php?page=whois&zone_id={{ zone['id'] }}" data-testid="whois-zone-{{ zone['id'] }}">
+                                    <i class="bi bi-search-heart text-secondary"></i> <span class="d-none d-md-inline text-secondary">{% trans %}WHOIS{% endtrans %}</span>
+                                </a>
+                                {% endif %}
+                                {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and zone['user_id'] == user_id) %}
                                 <a class="btn btn-sm btn-outline-primary"
                                 href="index.php?page=edit&id={{ zone['id'] }}">
                                     <i class="bi bi-pencil-square text-primary"></i> <span class="d-none d-md-inline text-primary">{% trans %}Edit{% endtrans %}</span>
@@ -179,8 +185,8 @@
                                 href="index.php?page=delete_domain&id={{ zone['id'] }}">
                                     <i class="bi bi-trash text-danger"></i> <span class="d-none d-md-inline text-danger">{% trans %}Delete{% endtrans %}</span>
                                 </a>
+                                {% endif %}
                             </div>
-                            {% endif %}
                         </td>
                     </tr>
                     {% endfor %}
