--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -176,6 +176,12 @@
                                     <i class="bi bi-search-heart text-secondary"></i> <span class="d-none d-md-inline text-secondary">{% trans %}WHOIS{% endtrans %}</span>
                                 </a>
                                 {% endif %}
+                                {% if rdap_enabled %}
+                                <a class="btn btn-sm btn-outline-secondary"
+                                href="index.php?page=rdap&zone_id={{ zone['id'] }}" data-testid="rdap-zone-{{ zone['id'] }}">
+                                    <i class="bi bi-search text-secondary"></i> <span class="d-none d-md-inline text-secondary">{% trans %}RDAP{% endtrans %}</span>
+                                </a>
+                                {% endif %}
                                 {% if edit_permission == 'all' or ((edit_permission == 'own' or edit_permission == 'own_as_client') and zone['user_id'] == user_id) %}
                                 <a class="btn btn-sm btn-outline-primary"
                                 href="index.php?page=edit&id={{ zone['id'] }}">
