fix: update translation filter syntax and add text-secondary class to eye icons

--- a/templates/default/add_perm_templ.html
+++ b/templates/default/add_perm_templ.html
@@ -63,7 +63,7 @@
                                     </div>
                                 </td>
                                 <td><code>{{ perm['name'] }}</code></td>
-                                <td>{% trans %}{{ descr }}{% endtrans %}</td>
+                                <td>{{ descr|trans }}</td>
                             </tr>
                             {% endfor %}
                             </tbody>
