--- a/templates/default/change_password.html
+++ b/templates/default/change_password.html
@@ -26,7 +26,7 @@
                         <label for="current_password" class="form-label">{% trans %}Current password{% endtrans %}</label>
                         <div class="input-group input-group-sm">
                             <input type="password" class="form-control form-control-sm" id="current_password" name="old_password" value="" required>
-                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('current_password', 'eye1')"><i class="bi bi-eye-fill" id="eye1"></i></button>
+                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('current_password', 'eye1')"><i class="bi bi-eye-fill text-secondary" id="eye1"></i></button>
                             <div class="invalid-feedback">{% trans %}Provide current password{% endtrans %}</div>
                         </div>
                     </div>
@@ -34,7 +34,7 @@
                         <label for="new_password" class="form-label">{% trans %}New password{% endtrans %}</label>
                         <div class="input-group input-group-sm">
                             <input type="password" class="form-control form-control-sm" id="new_password" name="new_password" value="" required>
-                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('new_password', 'eye2')"><i class="bi bi-eye-fill" id="eye2"></i></button>
+                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('new_password', 'eye2')"><i class="bi bi-eye-fill text-secondary" id="eye2"></i></button>
                             <div class="invalid-feedback">{% trans %}Provide new password{% endtrans %}</div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                         <label for="repeat_password" class="form-label">{% trans %}Repeat password{% endtrans %}</label>
                         <div class="input-group input-group-sm">
                             <input type="password" class="form-control form-control-sm" id="repeat_password" name="new_password2" value="" required>
-                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('repeat_password', 'eye3')"><i class="bi bi-eye-fill" id="eye3"></i></button>
+                            <button class="btn btn-sm btn-outline-secondary" type="button" onclick="showPassword('repeat_password', 'eye3')"><i class="bi bi-eye-fill text-secondary" id="eye3"></i></button>
                             <div class="invalid-feedback">{% trans %}Provide new password{% endtrans %}</div>
                         </div>
                     </div>
