--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -272,4 +272,38 @@
         </div>
     </div>
     {% endif %}
+    {% if (not whois_restrict_to_admin or permissions['user_is_ueberuser']) and whois_enabled %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-search-heart display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}WHOIS{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Lookup domain WHOIS information{% endtrans %}</p>
+                <a href="index.php?page=whois" class="btn btn-light btn-sm mt-2" data-testid="whois-link">
+                    <span class="d-none d-lg-inline">{% trans %}WHOIS Lookup{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}WHOIS{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    {% if (not rdap_restrict_to_admin or permissions['user_is_ueberuser']) and rdap_enabled %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-search-heart-fill display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}RDAP{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Lookup domain RDAP information{% endtrans %}</p>
+                <a href="index.php?page=rdap" class="btn btn-light btn-sm mt-2" data-testid="rdap-link">
+                    <span class="d-none d-lg-inline">{% trans %}RDAP Lookup{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}RDAP{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 </div>
