--- a/templates/default/add_zone_slave.html
+++ b/templates/default/add_zone_slave.html
@@ -20,14 +20,14 @@
                 <div class="col-md-6">
                     <div class="mb-3">
                         <label for="domain" class="form-label">{% trans %}Zone name{% endtrans %}</label>
-                        <input class="form-control form-control-sm" type="text" id="domain" name="domain" value="" required>
+                        <input class="form-control form-control-sm" type="text" id="domain" name="domain" value="{{ domain_value }}" required>
                         <div class="invalid-feedback">{% trans %}Provide zone name{% endtrans %}</div>
                         <small class="text-muted">{% trans %}Example: example.com{% endtrans %}</small>
                     </div>
 
                     <div class="mb-3">
                         <label for="slave_master" class="form-label">{% trans %}IP address of master NS{% endtrans %}</label>
-                        <input class="form-control form-control-sm" type="text" id="slave_master" name="slave_master" value="" required>
+                        <input class="form-control form-control-sm" type="text" id="slave_master" name="slave_master" value="{{ slave_master_value }}" required>
                         <div class="invalid-feedback">{% trans %}Provide IP address{% endtrans %}</div>
                         <small class="text-muted">{% trans %}IP address of the master name server (can be IPv4 or IPv6){% endtrans %}</small>
                     </div>
@@ -36,7 +36,7 @@
                         <label for="owner" class="form-label">{% trans %}Owner{% endtrans %}</label>
                         <select class="form-select form-select-sm" id="owner" name="owner">
                             {% for user in users %}
-                            {% if user['id'] == session_user_id %}
+                            {% if user['id'] == owner_value %}
                             <option value="{{ user['id'] }}" selected>
                                 {% if user['fullname'] %}
                                 {{ user['fullname'] }}
@@ -44,7 +44,7 @@
                                 {{ user['username'] }}
                                 {% endif %}
                             </option>
-                            {% elseif perm_view_others %}
+                            {% elseif perm_view_others or user['id'] == session_user_id %}
                             <option value="{{ user['id'] }}">
                                 {% if user['fullname'] %}
                                 {{ user['fullname'] }}
