--- a/templates/default/header.html
+++ b/templates/default/header.html
@@ -29,35 +29,36 @@
                 {% if user_logged_in %}
                 {% if perm_search %}
                 <li class="p-1">
-                    <a href="index.php?page=search" class="nav-link text-secondary"><i class="bi bi-search"></i></a>
-                    <a href="index.php?page=search" class="text-secondary text-decoration-none">{% trans %}Search{% endtrans %}</a>
+                    <a href="index.php?page=search" class="nav-link text-{{ current_page == 'search' ? 'primary' : 'secondary' }}"><i class="bi bi-search"></i></a>
+                    <a href="index.php?page=search" class="text-{{ current_page == 'search' ? 'primary' : 'secondary' }} text-decoration-none">{% trans %}Search{% endtrans %}</a>
                 </li>
                 {% endif %}
                 {% if perm_view_zone_own or perm_view_zone_other or perm_zone_master_add or perm_zone_slave_add %}
                 <li class="p-1">
-                    <a href="index.php?page=list_zones" class="nav-link text-secondary"><i class="bi bi-diagram-3"></i></a>
-                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="index.php?page=list_zones" class="nav-link text-{{ current_page in ['list_zones', 'list_forward_zones', 'list_reverse_zones', 'add_zone_master', 'add_zone_slave', 'bulk_registration', 'batch_ptr_record', 'list_log_zones', 'edit'] ? 'primary' : 'secondary' }}"><i class="bi bi-diagram-3"></i></a>
+                    <a class="text-{{ current_page in ['list_zones', 'list_forward_zones', 'list_reverse_zones', 'add_zone_master', 'add_zone_slave', 'bulk_registration', 'batch_ptr_record', 'list_log_zones', 'edit'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Zones{% endtrans %}</a>
                     <ul class="dropdown-menu">
                         {% if perm_view_zone_own or perm_view_zone_other %}
-                        <li><a class="dropdown-item" href="index.php?page=list_zones">{% trans %}List zones{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'list_forward_zones' ? 'active' : '' }}" href="index.php?page=list_forward_zones">{% trans %}Forward zones{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'list_reverse_zones' ? 'active' : '' }}" href="index.php?page=list_reverse_zones">{% trans %}Reverse zones{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_master_add %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'add_zone_master' ? 'active' : '' }}"
                                href="index.php?page=add_zone_master">{% trans %}Add master zone{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_slave_add %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'add_zone_slave' ? 'active' : '' }}"
                                href="index.php?page=add_zone_slave">{% trans %}Add slave zone{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_zone_master_add %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'bulk_registration' ? 'active' : '' }}"
                                href="index.php?page=bulk_registration">{% trans %}Bulk registration{% endtrans %}</a>
                         </li>
                         {% endif %}
                         {% if iface_add_reverse_record and (perm_view_zone_own or perm_view_zone_other) %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'batch_ptr_record' ? 'active' : '' }}"
                                href="index.php?page=batch_ptr_record">{% trans %}Batch PTR Records{% endtrans %}</a>
                         </li>
                         {% endif %}
@@ -65,83 +66,85 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="index.php?page=list_log_zones">{% trans %}Zone logs{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'list_log_zones' ? 'active' : '' }}" href="index.php?page=list_log_zones">{% trans %}Zone logs{% endtrans %}</a></li>
                         {% endif %}
                     </ul>
                 </li>
                 {% endif %}
                 <li class="p-1">
-                    <a href="index.php?page=users" class="nav-link text-secondary"><i class="bi bi-people"></i></a>
-                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="index.php?page=users" class="nav-link text-{{ current_page in ['users', 'add_user', 'edit_user', 'list_perm_templ', 'add_perm_templ', 'edit_perm_templ', 'list_log_users'] ? 'primary' : 'secondary' }}"><i class="bi bi-people"></i></a>
+                    <a class="text-{{ current_page in ['users', 'add_user', 'edit_user', 'list_perm_templ', 'add_perm_templ', 'edit_perm_templ', 'list_log_users'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Users{% endtrans %}</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="index.php?page=users">{% trans %}User administration{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'users' ? 'active' : '' }}" href="index.php?page=users">{% trans %}User administration{% endtrans %}</a></li>
                         {% if perm_add_new %}
-                        <li><a class="dropdown-item" href="index.php?page=add_user">{% trans %}Add user{% endtrans %}</a></li>
+                        <li><a class="dropdown-item {{ current_page == 'add_user' ? 'active' : '' }}" href="index.php?page=add_user">{% trans %}Add user{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_templ_perm_edit %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'list_perm_templ' ? 'active' : '' }}"
                                href="index.php?page=list_perm_templ">{% trans %}List permission templates{% endtrans %}</a></li>
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'add_perm_templ' ? 'active' : '' }}"
                                href="index.php?page=add_perm_templ">{% trans %}Add permission template{% endtrans %}</a></li>
                         {% endif %}
                         {% if perm_is_godlike and dblog_use == true %}
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'list_log_users' ? 'active' : '' }}"
                                href="index.php?page=list_log_users">{% trans %}User logs{% endtrans %}</a></li>
                         {% endif %}
                     </ul>
                 </li>
                 {% if perm_zone_master_add %}
                 <li class="p-1">
-                    <a href="index.php?page=list_zone_templ" class="nav-link text-secondary text-center"><i
+                    <a href="index.php?page=list_zone_templ" class="nav-link text-{{ current_page in ['list_zone_templ', 'add_zone_templ', 'edit_zone_templ', 'list_template_zones'] ? 'primary' : 'secondary' }} text-center"><i
                             class="bi bi-files"></i></a>
-                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                    <a class="text-{{ current_page in ['list_zone_templ', 'add_zone_templ', 'edit_zone_templ', 'list_template_zones'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Templates{% endtrans %}</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'list_zone_templ' ? 'active' : '' }}"
                                href="index.php?page=list_zone_templ">{% trans %}List zone templates{% endtrans %}</a></li>
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'add_zone_templ' ? 'active' : '' }}"
                                href="index.php?page=add_zone_templ">{% trans %}Add zone template{% endtrans %}</a></li>
                     </ul>
                 </li>
                 {% endif %}
-                {% if (not whois_restrict_to_admin or perm_is_godlike) and whois_enabled %}
+                {% if (not whois_restrict_to_admin or perm_is_godlike) and whois_enabled or (not rdap_restrict_to_admin or perm_is_godlike) and rdap_enabled %}
                 <li class="p-1">
-                    <a href="index.php?page=whois" class="nav-link text-secondary text-center"><i
-                            class="bi bi-search-heart"></i></a>
-                    <a href="index.php?page=whois" class="text-secondary text-decoration-none">
-                        {% trans %}WHOIS{% endtrans %}
-                    </a>
+                    <a href="#" class="nav-link text-{{ current_page in ['whois', 'rdap'] ? 'primary' : 'secondary' }} text-center"><i class="bi bi-tools"></i></a>
+                    <a class="text-{{ current_page in ['whois', 'rdap'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                       href="#"
+                       role="button">{% trans %}Tools{% endtrans %}</a>
+                    <ul class="dropdown-menu">
+                        {% if (not whois_restrict_to_admin or perm_is_godlike) and whois_enabled %}
+                        <li><a class="dropdown-item {{ current_page == 'whois' ? 'active' : '' }}" href="index.php?page=whois">
+                            <i class="bi bi-search-heart me-2"></i>{% trans %}WHOIS{% endtrans %}
+                        </a></li>
+                        {% endif %}
+                        {% if (not rdap_restrict_to_admin or perm_is_godlike) and rdap_enabled %}
+                        <li><a class="dropdown-item {{ current_page == 'rdap' ? 'active' : '' }}" href="index.php?page=rdap">
+                            <i class="bi bi-search-heart-fill me-2"></i>{% trans %}RDAP{% endtrans %}
+                        </a></li>
+                        {% endif %}
+                    </ul>
                 </li>
                 {% endif %}
-                {% if (not rdap_restrict_to_admin or perm_is_godlike) and rdap_enabled %}
                 <li class="p-1">
-                    <a href="index.php?page=rdap" class="nav-link text-secondary text-center"><i
-                            class="bi bi-search-heart-fill"></i></a>
-                    <a href="index.php?page=rdap" class="text-secondary text-decoration-none">
-                        {% trans %}RDAP{% endtrans %}
-                    </a>
-                </li>
-                {% endif %}
-                <li class="p-1">
-                    <a href="#" class="nav-link text-secondary"><i class="bi bi-person-circle"></i></a>
-                    <a class="text-secondary text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                    <a href="#" class="nav-link text-{{ current_page in ['change_password', 'logout'] ? 'primary' : 'secondary' }}"><i class="bi bi-person-circle"></i></a>
+                    <a class="text-{{ current_page in ['change_password', 'logout'] ? 'primary' : 'secondary' }} text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
                        href="#"
                        role="button">{% trans %}Account{% endtrans %}</a>
                     <ul class="dropdown-menu">
                         {% if auth_used %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'change_password' ? 'active' : '' }}"
                                href="index.php?page=change_password">{% trans %}Change password{% endtrans %}</a></li>
                         {% endif %}
-                        <li><a class="dropdown-item"
+                        <li><a class="dropdown-item {{ current_page == 'logout' ? 'active' : '' }}"
                                href="index.php?page=logout">{% trans %}Logout{% endtrans %}</a></li>
                     </ul>
                 </li>
