--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -26,11 +26,29 @@
                 <i class="bi bi-diagram-3 display-4"></i>
             </div>
             <div class="card-body d-flex flex-column justify-content-between">
-                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Zones{% endtrans %}</h6>
-                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage DNS zones{% endtrans %}</p>
-                <a href="index.php?page=list_zones" class="btn btn-light btn-sm mt-2" data-testid="list-zones-link">
-                    <span class="d-none d-lg-inline">{% trans %}List zones{% endtrans %}</span>
-                    <span class="d-lg-none">{% trans %}Zones{% endtrans %}</span>
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Forward Zones{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage forward DNS zones{% endtrans %}</p>
+                <a href="index.php?page=list_forward_zones" class="btn btn-light btn-sm mt-2" data-testid="list-forward-zones-link">
+                    <span class="d-none d-lg-inline">{% trans %}List forward zones{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Forward Zones{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    
+    {% if permissions['zone_content_view_own'] or permissions['zone_content_view_others'] %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-arrow-left-right display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}Reverse Zones{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}Manage reverse DNS zones{% endtrans %}</p>
+                <a href="index.php?page=list_reverse_zones" class="btn btn-light btn-sm mt-2" data-testid="list-reverse-zones-link">
+                    <span class="d-none d-lg-inline">{% trans %}List reverse zones{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}Reverse Zones{% endtrans %}</span>
                 </a>
             </div>
         </div>
